--- a/src/Pages/Auth/Auth.css
+++ b/src/Pages/Auth/Auth.css
@@ -1,9 +1,9 @@
-.login-page {
+.login-page, .signup-page {
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
     height: 100vh;
-    padding: 90px 0px;
+    /* padding: 90px 0px; */
     background-size: cover;
     background-repeat: no-repeat;
     background: linear-gradient(0deg, rgba(5, 39, 50, 0.7), rgba(45, 72, 81, 0.7)), url('../../Assets/Images/banner.jpg');
