--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,3 +1,15 @@
+.banner-section{
+    background: linear-gradient(0deg, rgba(49, 63, 71, 0.9), rgba(55, 75, 82, 0.7)), url('../../Assets/Images/banner.jpg');
+    width: 100%;
+    height: 100vh;
+}
+.banner-image-box {
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+}
+
 /* Business Section */
 .buniness-section {
     background: linear-gradient(0deg, rgba(49, 63, 71, 0.9), rgba(55, 75, 82, 0.7)), url('../../Assets/Images/business-bg2.jpg');
@@ -11,6 +23,7 @@
 .react-3d-carousel {
     height: 300px !important;
 }
+
 .slider-container,
 .slider-single-content,
 .slider-single .active,
@@ -18,4 +31,34 @@
 .react-3d-carousel .slider-container .slider-content,
 .react-3d-carousel .slider-container .slider-content .slider-single {
     height: 100% !important;
+}
+
+.react-3d-carousel .slider-container .slider-right div,
+.react-3d-carousel .slider-container .slider-left div {
+    background: rgba(49, 63, 71, 0.1) !important;
+    border: 0 !important;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+.react-3d-carousel .slider-container .slider-right div:hover,
+.react-3d-carousel .slider-container .slider-left div:hover {
+    background: rgba(49, 63, 71, 0.5) !important;
+}
+
+.comment-container {
+    background: linear-gradient(0deg, rgba(228, 245, 254, 0.9), rgba(223, 246, 253, 0.9)), url('../../Assets/Images/dots.png');
+}
+
+/* Contact form */
+.contact-section h2,
+.contact-section input,
+.contact-section textarea,
+.contact-section button,
+.contact-section p {
+    font-family: 'Josefin Sans', sans-serif;
 }
