--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,8 +1,9 @@
-.banner-section{
+.banner-section {
     background: linear-gradient(0deg, rgba(49, 63, 71, 0.9), rgba(55, 75, 82, 0.7)), url('../../Assets/Images/banner.jpg');
     width: 100%;
     height: 100vh;
 }
+
 .banner-image-box {
     top: 45%;
     left: 50%;
@@ -61,4 +62,27 @@
 .contact-section button,
 .contact-section p {
     font-family: 'Josefin Sans', sans-serif;
+}
+
+/* Expert section */
+.expert-section .expert-box {
+    position: relative;
+    overflow: hidden;
+}
+
+.expert-details {
+    position: absolute;
+    top: 0;
+    left: -500px;
+    color: #fff;
+}
+
+.expert-section .expert-box:hover .expert-details {
+    left: 0;
+    transition: .1s;
+    width: 85%;
+    height: 82%;
+    background-color: rgba(89, 100, 106, 0.7);
+    margin: 34px 19px;
+    border-radius: 5px;
 }
