--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,6 +1,6 @@
 .banner-section {
     background: linear-gradient(0deg, rgba(49, 63, 71, 0.9), rgba(55, 75, 82, 0.7)), url('../../Assets/Images/banner.jpg');
-    width: 100%;
+    max-width: 100%;
     height: 100vh;
 }
 
