--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,17 +1,21 @@
 .banner-section {
-    background: radial-gradient(#027971, #03a89d);
+    /* background: #343C97; */
     /*url('../../Assets/Images/banner.jpg');  */
     /* background: #03a89d; */
+    background: url('../../Assets/Images/bg.jpg');
+    background-position: center;
+    background-size: cover;
     max-width: 100%;
-    height: 110vh;
-    /* clip-path: ellipse(69% 100% at 50% 0%); */
-    clip-path: ellipse(90% 100% at 49% 0%);
+    height: 100vh;
+    clip-path: ellipse(81% 100% at 50% 0%);
     box-sizing: border-box;
+    overflow-x: hidden;
+    /* background-repeat: no-repeat; */
 }
 
 .banner-image-box {
-    top: 45%;
-    left: 50%;
+    top: 40%;
+    left: 70%;
     transform: translate(-50%, -50%);
     width: 70%;
 }
@@ -19,21 +23,17 @@
 
 /* Business Section */
 .buniness-section {
-    background: linear-gradient(0deg, rgba(49, 63, 71, 0.9), rgba(55, 75, 82, 0.7)), url('../../Assets/Images/business-bg2.jpg');
+    background: linear-gradient(0deg, rgba(45, 46, 53, 0.2), rgba(49, 49, 54, 0.2)), url('../../Assets/Images/business-bg.jpg');
+    
     min-height: 65vh;
+    background-size: 1266px 610px;
     width: 100%;
-    background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
 }
-
-
-
-
-
-/* body {
-    background: #333;
-  } */
-
+.buniness-section button{
+    cursor: pointer;
+}
 
 /* Review Carousle */
 .react-3d-carousel {
@@ -100,4 +100,19 @@
     background-color: rgba(89, 100, 106, 0.7);
     margin: 34px 19px;
     border-radius: 5px;
+}
+
+
+@media only screen and (max-width: 480px){
+    .banner-section {
+        height: 65vh;
+        clip-path: ellipse(150% 100% at 50% 0%);
+    }
+    .banner-image-box {
+        top: 50%;
+        left: 50%;
+    }
+    .buniness-section {
+        min-height: 85vh;
+    }
 }
