--- a/src/Pages/Shared/Footer.css
+++ b/src/Pages/Shared/Footer.css
@@ -1,10 +1,17 @@
-Footer{
-    background: radial-gradient(#027971, #03a89d);
-    /*url('../../Assets/Images/banner.jpg');  */
+footer{
+    background: #343C97;
+    /* url('../../Assets/Images/banner.jpg');  */
     /* background: #03a89d; */
     max-width: 100%;
     height: 50vh;
-    /* clip-path: ellipse(69% 100% at 50% 0%); */
-    clip-path: ellipse(85% 100% at 50% 0%);
+    clip-path: ellipse(81% 100% at 50% 100%);
     box-sizing: border-box;
+    padding: 120px 0 0 0;
+}
+
+@media only screen and (max-width: 480px){
+    footer{
+        margin-top: 50px;
+        clip-path: ellipse(120% 100% at 50% 100%);
+    }
 }
