--- a/src/Pages/Shared/Footer.css
+++ b/src/Pages/Shared/Footer.css
@@ -7,11 +7,13 @@ footer{
     clip-path: ellipse(81% 100% at 50% 100%);
     box-sizing: border-box;
     padding: 120px 0 0 0;
+    margin-top: -70px;
 }
 
 @media only screen and (max-width: 480px){
     footer{
-        margin-top: 50px;
+        /* margin-top: 50px; */
+        text-align: center;
         clip-path: ellipse(120% 100% at 50% 100%);
     }
 }
