--- a/src/Pages/Shared/Footer.css
+++ b/src/Pages/Shared/Footer.css
@@ -3,13 +3,15 @@ footer{
     /* url('../../Assets/Images/banner.jpg');  */
     /* background: #03a89d; */
     max-width: 100%;
-    height: 50vh;
+    height: 60vh;
     clip-path: ellipse(81% 100% at 50% 100%);
     box-sizing: border-box;
-    padding: 120px 0 0 0;
+    padding: 80px 0 0 0;
     margin-top: -70px;
 }
-
+.footer-logo{
+    margin-top: -100px;
+}
 @media only screen and (max-width: 480px){
     footer{
         /* margin-top: 50px; */
