--- a/src/Pages/Shared/Footer.css
+++ b/src/Pages/Shared/Footer.css
@@ -14,8 +14,12 @@ footer{
 }
 @media only screen and (max-width: 480px){
     footer{
-        /* margin-top: 50px; */
+        height: 95vh;
+        margin-top: 0;
         text-align: center;
         clip-path: ellipse(120% 100% at 50% 100%);
+    }
+    .footer-logo{
+        margin-top: 0px;
     }
 }
