--- a/src/Pages/Shared/Navbar.css
+++ b/src/Pages/Shared/Navbar.css
@@ -1,3 +1,5 @@
 .LOGO{
-    font-family: 'Ubuntu', sans-serif;
+    /* font-family: 'Ubuntu', sans-serif; */
+    /* font-family: 'Pacifico', cursive; */
+    font-family: 'Satisfy', cursive;
 }
