--- a/src/Pages/Shared/Navbar.css
+++ b/src/Pages/Shared/Navbar.css
@@ -3,3 +3,7 @@
     /* font-family: 'Pacifico', cursive; */
     font-family: 'Satisfy', cursive;
 }
+
+#top-navbar{
+    clip-path: polygon(7% 120%, 100% 100%, calc(105% - 30px) 0%, 0% 0%, calc(100% - 32px) 0%, 0% 0%)
+}
