top navbar social icon hover effect issue resolved

--- a/src/Pages/Shared/Navbar.css
+++ b/src/Pages/Shared/Navbar.css
@@ -13,3 +13,7 @@
     /* background-color: red;
     clip-path: polygon(0 0, 100% 0%, calc(100% - 22px) 100%, 0% 100%); */
 }
+
+.search-btn .search-tooltip{
+    display: 'none'
+}
