team section static design implemented

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -63,6 +63,7 @@
     font-family: 'Josefin Sans', sans-serif;
 }
 
+/* TEAM */
 /* Expert section */
 .expert-section .expert-box {
     position: relative;
