--- a/src/Pages/Shared/Footer.css
+++ b/src/Pages/Shared/Footer.css
@@ -1,17 +1,18 @@
 footer{
-    background: #343C97;
+    background: linear-gradient(to top, #e4f0fa, #fafffd); 
     /* url('../../Assets/Images/banner.jpg');  */
     /* background: #03a89d; */
     max-width: 100%;
-    height: 60vh;
-    clip-path: ellipse(81% 100% at 50% 100%);
+    /* height: 60vh; */
+    /* clip-path: ellipse(81% 100% at 50% 100%); */
     box-sizing: border-box;
     padding: 80px 0 0 0;
     margin-top: -70px;
+    color: black;
 }
-.footer-logo{
+/* .footer-logo{
     margin-top: -100px;
-}
+} */
 @media only screen and (max-width: 480px){
     footer{
         height: 95vh;
