Category and footer section updated

--- a/src/Pages/Shared/Footer.css
+++ b/src/Pages/Shared/Footer.css
@@ -6,8 +6,8 @@ footer{
     /* height: 60vh; */
     /* clip-path: ellipse(81% 100% at 50% 100%); */
     box-sizing: border-box;
-    padding: 80px 0 0 0;
-    margin-top: -70px;
+    padding: 0 0 0 0;
+    margin-top: 0px;
     color: black;
 }
 /* .footer-logo{
