--- a/src/Pages/Shared/CSS/Navbar.css
+++ b/src/Pages/Shared/CSS/Navbar.css
@@ -4,6 +4,11 @@
     font-family: 'Satisfy', cursive;
 }
 
+/*
+*
+*TOP NAVBAR
+*
+*/
 #top-navbar{
     clip-path: polygon(7% 120%, 100% 100%, calc(105% - 30px) 0%, 0% 0%, calc(100% - 32px) 0%, 0% 0%)
 }
