Responsiveness checked and hamburger icon designed

--- a/src/Pages/Shared/CSS/Footer.css
+++ b/src/Pages/Shared/CSS/Footer.css
@@ -18,7 +18,7 @@ footer{
         height: 95vh;
         margin-top: 0;
         text-align: center;
-        clip-path: ellipse(120% 100% at 50% 100%);
+        /* clip-path: ellipse(120% 100% at 50% 100%); */
     }
     .footer-logo{
         margin-top: 0px;
