Custom favicon icon implemented and footer responsive issue resolved

--- a/src/Pages/Shared/CSS/Footer.css
+++ b/src/Pages/Shared/CSS/Footer.css
@@ -15,7 +15,7 @@ footer{
 } */
 @media only screen and (max-width: 480px){
     footer{
-        height: 95vh;
+        /* height: 95vh; */
         margin-top: 0;
         text-align: center;
         /* clip-path: ellipse(120% 100% at 50% 100%); */
