Purchase responsiveness checked and home page responsiveness issue resolved

--- a/src/Components/CSS/component.css
+++ b/src/Components/CSS/component.css
@@ -4,5 +4,12 @@
 /*
 */
 .loading-spiner svg{
-    margin-left: 150px;
+    margin-left: 140px;
 }
+
+@media only screen and (max-width: 600px) {
+  .loading-spiner svg{
+    margin-left: 100px;
+}
+}
+
